# django-critical-css

./: .gitignore  .pre-commit-config.yaml  =3.2  LICENSE  MANIFEST.in  Makefile  README.md  example_usage.py  pyproject.toml  setup.py
django_critical_css/: admin.py  apps.py  middleware.py  models.py  tasks.py  tests.py  utils.py
django_critical_css/critical_service_container/: .dockerignore  Dockerfile  README.md  docker-compose.cached.yml  docker-compose.dev.yml  docker-compose.high-mem.yml  docker-compose.yml  manage.sh  package-lock.json  package.json  server-cached.js  server-playwright-css.js  server.js  test.js
django_critical_css/management/commands/: clear_critical_css.py  generate_critical_css.py  generate_critical_css_cached.py
django_critical_css/migrations/: 0001_initial.py  0002_add_source_last_modified.py
django_critical_css/templatetags/: critical_css.py
tests/: __init__.py  settings.py  urls.py
